Added checkbox for default using default container, with detection on upload to see if containers are default

--- a/src/App.css
+++ b/src/App.css
@@ -226,3 +226,12 @@
     margin-left: 15px;
 }
 
+.side-by-side-container {
+    display: flex;
+}
+
+.right-element {
+    margin-left: 5px;
+    flex-grow: 1;
+}
+
