--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 
 
 :root {
-  --background: green;
+  --background: blue;
   --text-primary: black;
   --border-color : black;
   --edge-color: black;
